# TeamProject3

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 176ff146ef42_init.py  55ee52e4e030_init.py  64f0ad3be463_init.py  6d2c1d662fe7_init.py  6dba3417da66_init.py  8bd853f123d9_init.py  d152008ee666_init.py  d8fbc36fbca2_init.py
app/src/: schemas.py
app/src/conf/: config.py
app/src/database/: db.py  models.py
app/src/ocr/model/: ModelCheck.py  ModelCreate.py  ModelTrainBig.py  README.md  models_accuracy.txt
app/src/ocr/ver1/: CarChars.py  CarPlate.py  ModelTrain.py  NumberRecognition.py  README.md  demo.py
app/src/ocr/ver2/: CarChars.ipynb  Image_to_Text.py  ModelTrain.py  README.md  demo.py  models_accuracy.txt
app/src/ocr/ver3/: CarPlateRecognition.py
app/src/ocr/video1/: Car_video_detection.py  README.md
app/src/repository/: cars.py  parking.py  rates.py  users.py
app/src/routes/: auth.py  parking.py  users.py
app/src/services/: auth.py  email.py
