[tool.poetry]
name = "teamproject3"
version = "0.1.0"
description = "Program to detect car license"
authors = ["RomanSiu <siusiailoroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
psycopg2 = "^2.9.9"
tomlkit = "^0.13.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
redis = "^5.0.7"
fastapi-limiter = "^0.1.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
